# socket-chat-for-windows

./: .gitignore  README.md  chat.sln
client/: CMakeLists.txt  client.vcxproj  client.vcxproj.filters
client/src/: client.cpp
server/: CMakeLists.txt  server.vcxproj  server.vcxproj.filters
server/data/: help.txt
server/src/: funcs.cpp  funcs.h  server.cpp
